# AstrBotCanary

./: .coveragerc  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  LICENSE  README.md  __about__.py  coverage.json  output.txt  pyproject.toml  radar.duckdb.wal  test_injector.py
.astrbot/config/TEST/: database.toml  general.nested_config.toml
.astrbot/config/astrbot-canary/: core.toml
.astrbot/config/astrbot_canary/: core.backend.toml  core.broker.toml  core.last_loaded_modules.toml  core.toml  core.worker.toml  metadata.webroot.toml
.astrbot/config/astrbot_canary_web/: basic.common.toml  basic.toml
.astrbot/data/astrbot_canary_web/: astrbot_canary_web.db  canary_web.db
.github/workflows/: Coverage.yml  pylint.yml
OpenAPI/: index.json
astrbot_canary_config/: README.md  pyproject.toml
astrbot_canary_config/example/: usage.ipynb
astrbot_canary_config/example/config_examples/A/: api_key.toml  example_config.toml
astrbot_canary_paths/: README.md  pyproject.toml
astrbot_canary_paths/example/: usage.ipynb
astrbot_canary_paths/src/astrbot_canary_paths/: paths.py
astrbot_canary_sdk/: pyproject.toml
astrbot_canary_sdk/src/astrbot_canary_sdk/: __init__.py
astrbot_config/: README.md  pyproject.toml
astrbot_config/example/: usage.ipynb
astrbot_config/example/config_examples/: A.toml  A@example_config.toml
astrbot_config/src/astrbot_config/: __init__.py  config.py
astrbot_injector/: LICENSE  README.md  pyproject.toml
astrbot_injector/example/: usage.ipynb
astrbot_injector/src/astrbot_injector/: __init__.py  astrnet_integration.py  containers.py  ctx.py  dependency.py  depends.py  exceptions.py  graph.py  injector.py  utils.py
astrbot_modules/: README.MD
astrbot_modules/astrbot_canary_api/: README.md  pyproject.toml
astrbot_modules/astrbot_canary_api/src/astrbot_canary_api/: __init__.py  abc.py  astrbot_module_api.py  config.py  db.py  decorators.py  enums.py  exceptions.py  interface.py  models.py  msgbus.py  paths.py  provider.py  scheduler.py  topology.py  types.py
astrbot_modules/astrbot_canary_helper/: pyproject.toml
astrbot_modules/astrbot_canary_helper/src/astrbot_canary_helper/: __init__.py  helper.py
astrbot_modules/astrbot_canary_loader/: pyproject.toml
astrbot_modules/astrbot_canary_loader/src/astrbot_canary_loader/: __init__.py  module.py  tasks.py
astrbot_modules/astrbot_canary_loader_api/: pyproject.toml
astrbot_modules/astrbot_canary_loader_api/src/astrbot_canary_loader_api/: __init__.py
astrbot_modules/astrbot_canary_tui/: pyproject.toml
astrbot_modules/astrbot_canary_tui/src/astrbot_canary_tui/: __init__.py  module.py
astrbot_modules/astrbot_canary_web/: README.md  pyproject.toml
astrbot_modules/astrbot_canary_web/src/astrbot_canary_web/: __init__.py  app.py  config.py  frontend.py  models.py  module.py
astrbot_modules/astrbot_canary_web/src/astrbot_canary_web/api/: __init__.py  provider.py
astrbot_modules/astrbot_canary_web/src/astrbot_canary_web/api/auth/: README.MD  __init__.py  login.py
astrbot_modules/astrbot_canary_web/src/astrbot_canary_web/api/auth/account/: edit.py
astrbot_modules/astrbot_canary_web/src/astrbot_canary_web/api/chat/: __init__.py
astrbot_modules/astrbot_canary_web/src/astrbot_canary_web/api/config/: __init__.py
astrbot_modules/astrbot_canary_web/src/astrbot_canary_web/api/conversation/: __init__.py
astrbot_modules/astrbot_canary_web/src/astrbot_canary_web/api/file/: __init__.py
astrbot_modules/astrbot_canary_web/src/astrbot_canary_web/api/live_log/: __init__.py
astrbot_modules/astrbot_canary_web/src/astrbot_canary_web/api/log_history/: __init__.py
astrbot_modules/astrbot_canary_web/src/astrbot_canary_web/api/persona/: __init__.py
astrbot_modules/astrbot_canary_web/src/astrbot_canary_web/api/plugin/: __init__.py
astrbot_modules/astrbot_canary_web/src/astrbot_canary_web/api/session/: __init__.py
astrbot_modules/astrbot_canary_web/src/astrbot_canary_web/api/stat/: __init__.py
astrbot_modules/astrbot_canary_web/src/astrbot_canary_web/api/t2i/: __init__.py
astrbot_modules/astrbot_canary_web/src/astrbot_canary_web/api/tools/: __init__.py
astrbot_modules/astrbot_canary_web/src/astrbot_canary_web/api/update/: __init__.py
astrbot_paths/: pyproject.toml
astrbot_paths/example/: usage.ipynb
astrbot_paths/src/astrbot_paths/: __init__.py  paths.py
astrbot_plugins/: README.MD
astrbot_sdk/: pyproject.toml
astrbox/: Cargo.toml  pyproject.toml
astrbox/src/: lib.rs
astrbox/src/astrbox/: __init__.py
astrnet/: README.md  pyproject.toml
astrnet/src/astrnet/: __init__.py  astrnet.py  schema.py  test.py
docs/: README.MD  pyproject.toml  spec-template.md
examples/: DEV.ipynb  astrbot_tasks.ipynb  astrbox.ipynb  celery_scheduler_example.ipynb  celery_tasks.py  pluggy_example.ipynb  readme.md  run_msgbus_demo.ipynb  run_scheduler_demo.py  test.ipynb
examples/module/: 从零开发Astrbot模块.ipynb
openspec/: project.md
scripts/: full2half.py  generate_stubs.py
src/astrbot_canary/: __about__.py  __main__.py  module.py  provider.py
src/astrbot_canary/astrnet/: astrnet.py
src/astrbot_canary/base/: __init__.py  config.py  module.py  paths.py  utils.py
src/astrbot_canary/core/: __init__.py  backends.py  backends.py.md  brokers.py  brokers.py.md  config.py  db.py  log_handler.py  models.py  module.py  paths.py  tasks.py  worker.py  worker.py.md
src/astrbot_canary/core/eventbus/: __init__.py  bus.py
src/astrbot_canary/loader/: AstrbotLoaderAPI.py  __init__.py  loader.py  specs.py
src/astrbot_canary/web/: __init__.py  routes.py  web.py
test/: astrbot_canary.db  run_msgbus_demo.py  test_astrbot_canary_config_entry.py  test_astrbot_config_entry.py  test_astrbot_injector_usage.py  test_astrnet.py  test_canary_paths.py  test_db.py  test_enums.py  test_injector.py  test_msgbus_async.py  test_paths.py  test_scheduler_inmemory.py
test/dev/: astrbotnet.py
tmp/loader/: __init__.py  loader.py
tmp/web/: routes.py  web.py
