[project]
name = "astrbot-canary"
version = "0.1.1"
description = "This is an official support Astrbot."
readme = "README.md"
authors = [
    { name = "LIghtJUNction", email = "LIghtJUNction.me@gmail.com" }
]
requires-python = ">=3.13.8"
dependencies = [
    "asyncio>=4.0.0",
    "click>=8.3.0",
    "dotenv>=0.9.9",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "rich>=14.1.0",
    "toml>=0.10.2",
    "tqdm>=4.67.1",
    "astrbot-canary-api",
    "astrbot-canary-helper", # 无特殊功能，简单封装，仅用于简化代码
    "anyio>=4.11.0",
    "trio>=0.31.0",
    "taskiq>=0.11.18",
    "pyzmq>=27.1.0",
    "orjson>=3.11.3",
    "aiosqlite>=0.21.0",
    "yarl>=1.22.0",
    "taskiq-pipelines>=0.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/astrbot_canary",
    "astrbot_canary_modules/astrbot_canary_loader",
    "astrbot_canary_modules/astrbot_canary_loader_api",
    "astrbot_canary_modules/astrbot_canary_api",
    "astrbot_canary_modules/astrbot_canary_web",
    "astrbot_canary_modules/astrbot_canary_tui",
    "astrbot_canary_modules/astrbot_canary_helper"
]

[tool.uv.workspace]
members = [
    "astrbot_modules/astrbot_canary_web",
    "astrbot_modules/astrbot_canary_loader",
    "astrbot_modules/astrbot_canary_loader_api",
    "astrbot_modules/astrbot_canary_api",
    "astrbot_modules/astrbot_canary_tui",
    "astrbot_modules/astrbot_canary_helper",
]

[tool.uv.sources]
astrbot-canary-api = { workspace = true }
astrbot-canary-web = { workspace = true }
astrbot-canary-tui = { workspace = true } 
astrbot-canary-loader = { workspace = true }
astrbot-canary-loader-api = { workspace = true }
astrbot-canary-helper = { workspace = true }


# 后续将上述组件改为可选依赖

[project.optional-dependencies]

web = ["astrbot-canary-web"]
loader = ["astrbot-canary-loader"]
tui = ["astrbot-canary-tui"]

all = [
    "astrbot-canary-loader", 
    "astrbot-canary-tui",
    "astrbot-canary-web"
]

dev = [
    "astrbot-canary-loader", 
    "astrbot-canary-tui",
    "astrbot-canary-web",
    # 测试相关
    "pytest-asyncio",
    "pytest-mock",
    "pytest-cov",
    "pytest",
    "coverage",
    "codecov",
    # 免得pylint工作流找不到
    "pluggy",
    "pydantic",
    "sqlalchemy",
    "taskiq"
]
[project.entry-points."astrbot.modules"]
"canary_core" = "astrbot_canary.module:AstrbotCoreModule"

# [tool.uv.sources]
# orjson = { git = "https://github.com/ijl/orjson.git" ,tag = "3.11.0"}
# pyo3最新支持到3.13
# 等后续pyo3支持到14后直接升级到14

# 对于插件项目：
# [project.entry-points."astrbot.plugins"]
# "example-plugin" = "examples.plugin_example:Plugin"      # 指向插件类

