[project]
name = "astrbot-config"
version = "0.1.2"
description = "astrbot configuration "
readme = "README.md"
authors = [
    { name = "LIghtJUNction", email = "LIghtJUNction.me@gmail.com" }
]
requires-python = ">=3.13.8"
dependencies = [
    "astrbot-canary-api",
    "keyring>=25.6.0",
    "pydantic>=2.12.3",
    "toml>=0.10.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
astrbot-canary-api = { workspace = true }
