[project]
name = "astrbot-config"
version = "0.1.4"
description = "astrbot configuration "
readme = "README.md"
authors = [
    { name = "LIghtJUNction", email = "LIghtJUNction.me@gmail.com" }
]
requires-python = ">=3.13.8"
dependencies = [
    "astrbot-canary-api",
    "keyring>=25.6.0",
    "pydantic>=2.12.3",
    "toml>=0.10.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

