[project]
name = "astrbot-config"
description = "astrbot configuration "
readme = "README.md"
authors = [
    { name = "LIghtJUNction", email = "LIghtJUNction.me@gmail.com" }
]
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "astrbot-canary-api",
    "keyring>=25.6.0",
    "pydantic>=2.12.3",
    "toml>=0.10.2",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
search_parent_directories = true

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

