[project]
name = "astrbot-injector"
version = "0.1.3"
description = "Astrbot Dependencies injector"
readme = "README.md"
authors = [
    { name = "LIghtJUNction", email = "LIghtJUNction.me@gmail.com" }
]
requires-python = ">=3.13.8"
dependencies = [
    "wrapt>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

