[project]
name = "astrbot-paths"
version = "0.1.3"
description = "提供各类路径,确保整个系统路径规范"
readme = "README.md"
authors = [
    { name = "LIghtJUNction", email = "LIghtJUNction.me@gmail.com" }
]
requires-python = ">=3.13.8"
dependencies = [
    "astrbot-canary-api",
    "dotenv>=0.9.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
