[project]
name = "astrbot-sdk"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "LIghtJUNction", email = "LIghtJUNction.me@gmail.com" }
]
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = []

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
search_parent_directories = true

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
