[project]
name = "astrnet"
version = "0.1.0"
description = "基于fastapi的通信网络"
readme = "README.md"
authors = [
    { name = "LIghtJUNction", email = "LIghtJUNction.me@gmail.com" }
]
requires-python = ">=3.13.8"
dependencies = [
    "graphql-core==3.2.5",
    "strawberry-graphql==0.284.1",
    "taskiq>=0.11.19",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "strawberry-graphql[cli,debug-server]>=0.284.1",
]
