[project]
name = "astrnet"
description = "基于fastapi的通信网络"
readme = "README.md"
authors = [
    { name = "LIghtJUNction", email = "LIghtJUNction.me@gmail.com" }
]
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "graphql-core==3.2.5",
    "strawberry-graphql==0.284.1",
    "taskiq>=0.11.19",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
search_parent_directories = true

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "strawberry-graphql[cli,debug-server]>=0.284.1",
]
