[project]
name = "astrbot-paths"
description = "astrbot 规范化路径管理"
readme = "README.md"
authors = [
    { name = "LIghtJUNction", email = "LIghtJUNction.me@gmail.com" }
]
dynamic = ["version"]

requires-python = ">=3.13"

license = { file = "LICENSE" }
dependencies = []

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
search_parent_directories = true

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
