[project]
name = "astrbot-canary-api"
version = "0.1.0"
description = "astrbot module canary api"
readme = "README.md"
authors = [
    { name = "LIghtJUNction", email = "LIghtJUNction.me@gmail.com" }
]
requires-python = ">=3.13.8"
dependencies = [
    "anyio>=4.11.0",
    "celery>=5.5.3",
    "dotenv>=0.9.9",
    "kombu>=5.5.4",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.44",
    "toml>=0.10.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points."astrbot.modules.API"]
"canary_modules_api" = "astrbot_canary_api:AstrbotModuleAPI"
