[project]
name = "astrbot-canary-api"
version = "0.1.0"
description = "astrbot module canary api"
readme = "README.md"
authors = [
    { name = "LIghtJUNction", email = "LIghtJUNction.me@gmail.com" }
]
requires-python = ">=3.13.8"
dependencies = [
    "anyio>=4.11.0",
    "dependency-injector>=4.48.2",
    "dotenv>=0.9.9",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "pyzmq>=27.1.0",
    "sqlalchemy>=2.0.44",
    "taskiq>=0.11.18",
    "taskiq-aio-pika>=0.4.3",
    "taskiq-aio-sqs>=0.4.0",
    "taskiq-nats>=0.5.1",
    "taskiq-postgresql>=0.4.0",
    "taskiq-redis>=1.1.2",
    "taskiq-ydb>=0.3.1",
    "toml>=0.10.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points."astrbot.modules.API"]
"canary_modules_api" = "astrbot_canary_api:AstrbotModuleAPI"
