[project]
name = "astrbot-canary-api"
description = "astrbot module canary api"
readme = "README.md"
authors = [
    { name = "LIghtJUNction", email = "LIghtJUNction.me@gmail.com" }
]
dynamic = ["version"]
requires-python = ">=3.13"
dependencies = [
    "anyio>=4.11.0",
    "dotenv>=0.9.9",
    "pluggy>=1.6.0",
    "pydantic>=2.12.0",
    "sqlalchemy>=2.0.44",
    "taskiq>=0.11.18",
    "toml>=0.10.2",
    "wrapt>=1.17.3",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
search_parent_directories = true

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

