[project]
name = "astrbot-canary-helper"
description = "辅助函数和工具,用于辅助AstrBotCanary的开发和维护,包含一些实用的工具"
readme = "README.md"
authors = [
    { name = "LIghtJUNction", email = "LIghtJUNction.me@gmail.com" }
]
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = []

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
search_parent_directories = true

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
