[project]
name = "astrbot-canary-loader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "LIghtJUNction", email = "LIghtJUNction.me@gmail.com" }
]
requires-python = ">=3.13.8"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 以下为加载器模块入口点
[project.entry-points."astrbot.modules.loader"]
"canary_loader" = "astrbot_canary.loader.loader:AstrbotLoader"
