[project]
name = "astrbot-canary-loader"
version = "0.1.0"
description = "astrbot canary模块加载器"
readme = "README.md"
authors = [
    { name = "LIghtJUNction", email = "LIghtJUNction.me@gmail.com" }
]
requires-python = ">=3.13.8"
dependencies = [
    "astrbot-canary-api",
    "astrbot-canary-loader-api",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
astrbot-canary-loader-api = { workspace = true }
astrbot-canary-api = { workspace = true }

# 以下为加载器模块入口点
[project.entry-points."astrbot.modules"]
"canary_loader" = "astrbot_canary_loader:AstrbotLoader"
