[project]
name = "astrbot-canary-loader"
description = "astrbot canary模块加载器"
readme = "README.md"
authors = [
    { name = "LIghtJUNction", email = "LIghtJUNction.me@gmail.com" }
]
dynamic = ["version"]
requires-python = ">=3.13"
dependencies = [
    "astrbot-canary-api",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
search_parent_directories = true

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.uv.sources]
astrbot-canary-loader-api = { workspace = true }
astrbot-canary-api = { workspace = true }

# 以下为加载器模块入口点
[project.entry-points."astrbot.modules"]
"canary_loader" = "astrbot_canary_loader:AstrbotLoader"
