[project]
name = "astrbot-canary-loader-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "LIghtJUNction", email = "LIghtJUNction.me@gmail.com" }
]
requires-python = ">=3.13.8"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 以下为插件加载器提供的API入口点，为了实现最大兼容性
# 插件开发者应当使用这些入口点调用API
# 这样即便更换了插件加载器，也能保证插件的最大兼容性.
[project.entry-points."astrbot.modules.loader.API"]
"canary_loader_api" = "astrbot_canary_loader_api:AstrbotLoaderAPI"