[project]
name = "astrbot-canary-web"
description = "astrbot canary web module"
readme = "README.md"
authors = [
    { name = "LIghtJUNction", email = "LIghtJUNction.me@gmail.com" }
]
dynamic = ["version"]
requires-python = ">=3.13"
dependencies = [
    "anyio>=4.11.0",
    "astrbot-canary-api",
    "email-validator>=2.3.0",
    "fastapi>=0.119.0",
    "fastapi-radar>=0.2.0",
    "fastapi-users[sqlmodel]>=13.0.0",
    "orjson>=3.11.3",
    "pydantic>=2.12.0",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
    "tqdm>=4.67.1",
    "uvicorn>=0.37.0",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
search_parent_directories = true

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.uv.sources]
astrbot-canary-api = { workspace = true }

[project.entry-points."astrbot.modules"]
"canary_web" = "astrbot_canary_web:AstrbotCanaryWeb"
